# tahoe-conditions

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  resorts.yaml
.github/workflows/: update.yml
docs/: embed.html  index.html
docs/data/: latest.json  summary.json
docs/data/resorts/: boreal.json  diamond-peak.json  heavenly.json  homewood.json  kirkwood.json  mt-rose.json  northstar.json  palisades-tahoe.json  sierra-at-tahoe.json  soda-springs.json  sugar-bowl.json  tahoe-donner.json
public/data/: latest.json  summary.json
public/data/resorts/: boreal.json  diamond-peak.json  heavenly.json  homewood.json  kirkwood.json  mt-rose.json  northstar.json  palisades-tahoe.json  sierra-at-tahoe.json  soda-springs.json  sugar-bowl.json  tahoe-donner.json
tahoe_conditions/: __init__.py  __main__.py  config.py  http.py  main.py  models.py  output.py  registry.py  summarize.py
tahoe_conditions/adapters/: __init__.py  base.py  boreal.py  diamond_peak.py  generic_html.py  homewood.py  mt_rose.py  palisades.py  placeholder_headless.py  registry.py  sierra_at_tahoe.py  sugar_bowl.py  tahoe_donner.py  vail_resorts.py
tahoe_conditions/tests/: __init__.py  test_parsing.py
tahoe_conditions/weather/: __init__.py  nws.py
