[project]
name = "tahoe-conditions"
version = "0.1.0"
description = "Lake Tahoe ski resort conditions aggregator"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
headless = [
    "playwright>=1.40.0",
]

[project.scripts]
tahoe-conditions = "tahoe_conditions.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tahoe_conditions*"]

[tool.pytest.ini_options]
testpaths = ["tahoe_conditions/tests"]
